# Cpp-Interviewer

./: CLAUDE.md  LICENSE  README.md  README_EN.md  pyproject.toml  setup.ps1  setup.py  setup.sh
coach/: __init__.py  cli.py  config.py  db.py  llm.py  models.py  prompts.py  scheduler.py  skill_adapter.py
docs/superpowers/plans/: 2026-05-13-cpp-interviewer-coach-agent-plan.md
docs/superpowers/specs/: 2026-05-13-cpp-interviewer-coach-agent-design.md
skills/coach/: SKILL.md
skills/coach/coach/: config.py  db.py  evaluator.py  models.py  scheduler.py
skills/interview/: COACH_SKILL.md  SKILL.md  shared_rules.md
skills/interview/index/: knowledge_index.json
tests/: __init__.py  test_cli_entrypoint.py  test_db.py  test_evaluator.py  test_openai_client.py  test_scheduler.py  test_skill_adapter.py
