[project]
name = "cpp-interviewer-coach"
version = "0.1.0"
description = "C++ Interview Coach Agent — Weakness-driven training with precise diagnosis"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
coach = "coach.cli:main"
cpp-coach = "coach.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]